# sbrga

./: .gitignore  Cargo.toml  build.rs
assets/shaders/: stroke.frag  stroke.vert  triangle.frag  triangle.vert
src/: create_direction_map.rs  create_individual.rs  genetic_algorithm.rs  individual.rs  main.rs  render_gl.rs  renderer.rs  resources.rs  triangle.rs  visualize_direction_map.rs
src/render_gl/: buffer.rs  color_buffer.rs  shader.rs  viewport.rs
